--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MonsterJourney</string>
+    <string name="app_name">Monster Journey</string>
     <string name="channel_name">Game Notifications</string>
     <string name="channel_description">Tells you when your monster has encounted an event.</string>
     <string name="icon_description">Current monster animation</string>
@@ -8,6 +8,15 @@
     <string name="back">Back</string>
     <string name="confirm">Confirm</string>
     <string name="close">Close</string>
+    <string name="volume">Volume: </string>
+    <string name="pedometer">Run while app closed: </string>
+    <string name="rate">Rate this game!</string>
+
+    <string name="removeads">Remove ads</string>
+    <string name="buylightegg">Buy Light Egg</string>
+    <string name="buydarkegg">Buy Dark Egg</string>
+    <string name="buycosmicegg">Buy Cosmic Egg</string>
+    <string name="buyitempack">Buy Item Pack</string>
 
     <string name="playagain">Play Again</string>
     <string name="cancel">Cancel</string>
@@ -29,6 +38,18 @@
     <string name="FoodTitle1">Small Apple</string>
     <string name="FoodDescription1">A basic food item. Restores half a heart upon consumption</string>
 
+    <string name="FoodTitle2">Bigger Apple</string>
+    <string name="FoodDescription2">A food item. Restores half a heart upon consumption</string>
+
+    <string name="FoodTitle3">Large Apple</string>
+    <string name="FoodDescription3">A large food item. Restores half a heart upon consumption</string>
+
+    <string name="FoodTitle4">Training Pill</string>
+    <string name="FoodDescription4">Restores one diligence heart upon consumption.</string>
+
+    <string name="FoodTitle5">Evolution Drug</string>
+    <string name="FoodDescription5">A rare item. Reduces steps needed to evolve by 1000.</string>
+
     <string name="Evolve">Evolve</string>
     <string name="EvolveInfo">Evolve your monster if conditions have been met.</string>
 
@@ -39,9 +60,19 @@
     <string name="Matchmaking">Matchmaking</string>
     <string name="Matchmakinginfo">Search for a match for your monster!</string>
 
+    <string name="BattleFriend">Battle</string>
+    <string name="BattleFriendInfo">Connect and battle with another nearby person\'s monster.</string>
+
+    <string name="BreedFriend">Match</string>
+    <string name="BreedingFriendInfo">Connect with another person\'s monster and create a new egg. (Caution: will retire your current monster, both players must have an adult stage monster.)</string>
+
     <string name="MatchmakerEarly">Hello young soul. I am the matchmaker. Once your monster has grown seek me again so I may find it a suitor.</string>
     <string name="MatchmakerText">Hello old soul. I am the matchmaker. Bear your heart to me and I shall find you a suitor. Shall I look for a match for your monster?</string>
     <string name="MatchmakerFound">I come bearing a match. Do you accept this proposition?</string>
+
+    <string name="BattleTitle">Battle!</string>
+    <string name="BattleEnemyHealth">Enemy Health: </string>
+    <string name="BattlePlayerHealth">Player Health: </string>
 
     <string name="simonsays">Memory game button</string>
     <string name="hungerbar">Hunger Bar</string>
